--- a/package.json
+++ b/package.json
@@ -32,6 +32,15 @@
   },
   "devDependencies": {
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.21.0",
+    "eslint": "^1.7.3",
+    "eslint-loader": "^1.1.0",
+    "file-loader": "^0.8.4",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.7.1",
+    "node-sass": "^3.4.1",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
   }
 }
