--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Angular application which shows how to upgrade ng1 based app to the new ng2 base",
   "main": "bundle.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --inline --colors"
   },
   "repository": {
     "type": "git",
@@ -26,21 +26,34 @@
   },
   "homepage": "https://github.com/m0t0r/ng1-to-ng2-agile-dashboard#readme",
   "dependencies": {
-    "angular": "^1.4.7",
-    "angular-material": "^0.11.4",
-    "angular-ui-router": "^0.2.15"
+    "angular": "1.5.0-rc.0",
+    "angular-animate": "1.5.0-rc.0",
+    "angular-aria": "1.5.0-rc.0",
+    "angular-material": "1.0.1",
+    "angular-ui-router": "0.2.15",
+    "jquery": "2.1.4"
   },
   "devDependencies": {
-    "babel-loader": "^5.3.3",
-    "css-loader": "^0.21.0",
-    "eslint": "^1.7.3",
-    "eslint-loader": "^1.1.0",
-    "file-loader": "^0.8.4",
-    "jade": "^1.11.0",
-    "jade-loader": "^0.7.1",
-    "node-sass": "^3.4.1",
-    "sass-loader": "^3.1.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.2"
+    "babel-loader": "6.2.0",
+    "browser-sync": "2.9.11",
+    "css-loader": "0.23.0",
+    "del": "2.0.2",
+    "eslint": "1.10.3",
+    "eslint-loader": "1.1.1",
+    "file-loader": "0.8.5",
+    "gulp": "3.9.0",
+    "gulp-concat": "2.6.0",
+    "gulp-inject": "3.0.0",
+    "gulp-jade": "1.1.0",
+    "gulp-sass": "2.1.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-watch": "4.3.5",
+    "jade": "1.11.0",
+    "jade-loader": "0.8.0",
+    "node-sass": "3.4.2",
+    "run-sequence": "1.1.4",
+    "sass-loader": "3.1.2",
+    "style-loader": "0.13.0",
+    "webpack": "1.12.9"
   }
 }
